--- a/.github/workflows/relnotes.yml
+++ b/.github/workflows/relnotes.yml
@@ -5,16 +5,25 @@ on:
   - cron:  '15 1 * * *'
 
 #  - cron:  '0 5 * * *'
-  
+
 # - push
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
+
 
 
 jobs:
 
   build:
- 
+
     runs-on: ubuntu-latest
- 
+
     steps:
     - uses: actions/checkout@v1
     - name: Build the release notes
@@ -35,7 +44,7 @@ jobs:
         cd vpp
         perl ../vpp-relops/make-relnotes.pl >../vpp-release-notes/README.md
         cd ..
-        
+
     - name: Push the new release note
       env:
          SECRET_SSH_KEY: ${{ secrets.VPP_RELNOTES_PRIVATE_SSH_KEY }}
@@ -44,5 +53,5 @@ jobs:
          git add README.md || true
          git commit -a -m "Auto-update at $(date)"
          ssh-agent bash -c 'ssh-add secret_ssh_key; git push origin master'
-          
-           
+
+
