--- a/.github/workflows/relnotes.yml
+++ b/.github/workflows/relnotes.yml
@@ -33,7 +33,7 @@ jobs:
         sudo mkdir /run/user/$(id -u) || true
         sudo chown $(whoami) /run/user/$(id -u)
         # sudo apt-get install -y --allow-downgrades libllvm6.0=1:6.0-1ubuntu2
-        sudo apt-get install clang-format-6.0
+        # sudo apt-get install clang-format-6.0
         sudo apt-get update
         sudo apt-get install -y coreutils jq
         git clone https://github.com/FDio/vpp
